# chatekld

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PROMPTS.md  README.md  app.py  conftest.py  constraints.txt  create_app_icon.py  install_and_build.sh  launch.py  package-lock.json  package.json  pdf_extractor.py  project_structure.txt  pyproject.toml  requirements-dev.txt  requirements.txt  smoke_test.py  test_agent.py  test_audit.py  test_compile.py  test_concurrency.py  test_deck.py  test_health.py  test_lancedb_migration.py  test_launch.py  test_llm.py  test_plainchat.py  test_prompts.py  test_prompts_hub.py  test_refactor.py  test_thesaurus.py  test_validators.py  test_vault_regressions.py  vitest.config.js
.github/workflows/: ci.yml  live-smoke.yml
api/: security.py  sse.py  validators.py
api/routes/: about.py  audit.py  config.py  deck.py  paper.py  plainchat.py  prompts.py  refactor.py  status.py  usage.py  vault.py
audit/: CLAUDE.md  __init__.py  __main__.py  config.py  manager.py  scan.py  serialize.py
audit/core/: bib.py  finder_tags.py  hashing.py  naming.py  obsidian.py  pdf_annotations.py  zotero.py
audit/engine/: bridge.py  duplicates.py  inventory.py
core/: config.py  constants.py  database.py  feedback.py  paths.py  prompt_capture.py  utils.py
core/agent/: CLAUDE.md  __init__.py  budget.py  loop.py  protocol.py  tools.py  vault_tools.py
core/llm/: CLAUDE.md  __init__.py  base.py  chat.py  factory.py  model_listing.py  policy.py  prompt.py  redact.py  retry.py  tool_schema.py  types.py  usage.py
core/providers/: __init__.py  base.py  lms.py  ollama.py  server.py
deckgen/: README.md  __init__.py  __main__.py  assemble.py  augment.py  checkpoint.py  client.py  compile.py  inprocess.py  outline.py  prompts.py  requirements.txt  result.py  retry.py  review.py  scaffold.py  sections.py  template.py
deckgen/tests/: test_augment.py  test_checkpoint.py  test_cli_integration.py  test_deckgen.py  test_retry.py  test_template.py
docs/: plain_chat_panel.md  project_note_refactor.md
docs/screenshots/: README.md
packaging/: seed_models.command
rag/: CLAUDE.md  engine.py  lancedb_store.py  summarizer.py  thesaurus.py  vault.py
refactor/: __init__.py  _write.py  apply.py  archive.py  cache.py  discrepancy.py  extract.py  flags.py  format_fix.py  hints.py  hygiene.py  ignore.py  journal.py  llm_apply.py  llm_edit.py  local_model.py  normalize.py  pdfref.py  plan.py  resolver.py  result.py  review.py  sections.py  staging.py  text.py
scripts/: compact_lancedb.py  migrate_vector_store.py  prune_storage_to_vector_store.py  repair_simple_vector_store.py
services/: pdf_service.py  vision.py
static/css/: styles.css
static/js/: api.js  app.js  audit.js  config.js  deck.js  plainchat.js  prompts.js  refactor.js  settings.js  summarizer.js  ui.js  vault.js
templates/: index.html
tests/audit/: conftest.py  test_bib.py  test_bridge_filename.py  test_bridge_mapping.py  test_hashing.py  test_inventory.py  test_naming.py  test_obsidian.py  test_pdf_annotations.py
tests/eval/: README.md  golden_qa.json  run_eval.py  scoring.py  test_eval_pipeline.py  test_scoring.py
tests/js/: basket38.test.js  configPersistence.test.js  confirmCeremony.test.js  latestWins.test.js  (+14 more)
(+12 files in other folders)
